@@ -17,17 +17,15 @@ BOOST_AUTO_TEST_SUITE(TestAddressA)
   {
     setup ();
 
-    using Astroid::log;
-
     ustring ar = "A B <test@example.com>";
     Address a (ar);
-    log << test << "address: " << a.full_address () << endl;
+    LOG (test) << "address: " << a.full_address ();
 
     BOOST_CHECK (ar == a.full_address ());
 
     ar = "\"B, A\" <test@example.com>";
     a = Address (ar);
-    log << test << "address: " << a.full_address () << endl;
+    LOG (test) << "address: " << a.full_address ();
 
     BOOST_CHECK (ar == a.full_address ());
 
@@ -41,7 +39,7 @@ BOOST_AUTO_TEST_SUITE(TestAddressA)
      */
     ar = "=?utf-8?B?Ik3DvHR0ZXIsIEEi?= <a.b@c.com>";
     a = Address (ar);
-    log << test << "address: " << a.full_address () << endl;
+    LOG (test) << "address: " << a.full_address ();
 
     BOOST_CHECK ("\"Mütter, A\" <a.b@c.com>" == a.full_address ());
 
@@ -55,14 +53,12 @@ BOOST_AUTO_TEST_SUITE(TestAddressA)
   {
     setup ();
 
-    using Astroid::log;
-
     Message m ("test/mail/test_mail/isspace-fail-utf-8.eml");
-    log << test << m.sender << endl;
+    LOG (test) << m.sender;
 
     Address ma (m.sender);
     ustring b = ma.fail_safe_name ();
-    log << test << "address: " << b << endl;
+    LOG (test) << "address: " << b;
 
     Address testspace (" Hey", "");
     BOOST_CHECK ("Hey" == testspace.fail_safe_name ());
